Fix spacing

--- a/style.css
+++ b/style.css
@@ -185,7 +185,8 @@ h1.project-title {
     color: #000;
 }
 .abstract {
-    font-size: 16px
+    font-size: 16px;
+    margin-bottom: 20px;
 }
 .video {
     text-align: center;
